--- a/index3.html
+++ b/index3.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<header class="head_nav" style="width: 100%; margin-top: -140px;">
+<header class="head_nav" style="width: 100%; margin-top: -150px">
     <h1>Online Library</h1>
 </header>
 
-<nav class="head_nav" style=" width: 100%; margin-top: -60px;">
+<nav class="head_nav" style=" width: 100%; margin-top: -80px;">
     <ul>
         <li><a href="index3.html">Home</a></li>
         <li><a href="#science-fiction">Science Fiction</a></li>
